plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ru.yandex.practicum'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

springBoot {
	buildInfo()
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.postgresql:postgresql:42.7.5'
    implementation 'com.google.code.gson:gson:2.12.1'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.2.0'


	// Testing ...
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // Mockito
    testImplementation 'org.mockito:mockito-junit-jupiter:5.15.2'
    testImplementation 'org.mockito:mockito-core:5.15.2'
    // AssertJ
    testImplementation 'org.assertj:assertj-core:3.27.3'
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	useJUnitPlatform()
}
